; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ssl_test.c_check_nid.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ssl_test.c_check_nid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"%s type mismatch, %s vs %s\0A\00", align 1
@NID_undef = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"absent\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @check_nid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_nid(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %3
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %10, %3
  store i32 1, i32* %4, align 4
  br label %29

15:                                               ; preds = %10
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i8* @OBJ_nid2ln(i32 %17)
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* @NID_undef, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %15
  br label %26

23:                                               ; preds = %15
  %24 = load i32, i32* %7, align 4
  %25 = call i8* @OBJ_nid2ln(i32 %24)
  br label %26

26:                                               ; preds = %23, %22
  %27 = phi i8* [ getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), %22 ], [ %25, %23 ]
  %28 = call i32 @TEST_error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %18, i8* %27)
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %26, %14
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @TEST_error(i8*, i8*, i8*, i8*) #1

declare dso_local i8* @OBJ_nid2ln(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
